[project]
name = "personal-finance-dashboard"
version = "0.1.0"
description = "A Streamlit dashboard for personal finance tracking with AI-powered transaction extraction."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "altair",
    "annotated-types",
    "anyio",
    "attrs",
    "blinker",
    "cachetools",
    "certifi",
    "charset-normalizer",
    "click",
    "dataclasses-json",
    "distro",
    "frozenlist",
    "gitdb",
    "gitpython",
    "h11",
    "httpcore",
    "httpx",
    "httpx-sse",
    "idna",
    "jinja2",
    "jiter",
    "jsonpatch",
    "jsonpointer",
    "jsonschema",
    "jsonschema-specifications",
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-openai>=0.3,<0.4",
    "langchain-tavily",
    "langchain-text-splitters>=0.3,<0.4",
    "langgraph",
    "langgraph-checkpoint",
    "langgraph-prebuilt",
    "langgraph-sdk",
    "langsmith",
    "markupsafe",
    "marshmallow",
    "multidict",
    "mypy-extensions",
    "narwhals",
    "numpy",
    "openai",
    "orjson",
    "ormsgpack",
    "packaging",
    "openpyxl",
    "pandas",
    "pillow",
    "propcache",
    "protobuf",
    "psycopg2-binary",
    "plotly",
    "pyarrow",
    "pydantic>=2,<3",
    "pydantic-core",
    "pydantic-settings",
    "pydeck",
    "pytesseract",
    "python-dateutil",
    "python-dotenv",
    "pytz",
    "pyyaml",
    "referencing",
    "regex",
    "requests",
    "requests-toolbelt",
    "rpds-py",
    "six",
    "smmap",
    "sniffio",
    "sqlalchemy",
    "streamlit",
    "streamlit-aggrid",
    "streamlit-local-storage",
    "streamlit-oauth",
    "tavily-python",
    "tenacity",
    "tiktoken",
    "toml",
    "tornado",
    "tqdm",
    "typing-extensions",
    "typing-inspect",
    "typing-inspection",
    "tzdata",
    "urllib3",
    "xxhash",
    "yarl",
    "zstandard",
    # Web browsing
    "browser-use",
    "playwright>=1.52",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*", "core*"]
exclude = ["pages*"] 